<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/str_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/str_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <group android:checkableBehavior="single">
        <item android:id="@+id/sort_by_app_label"
            android:title="@string/sort_by_appname"
            android:checked="true"/>
        <item android:id="@+id/sort_by_pkg_name"
            android:title="@string/sort_by_pkg_name"/>
        <item android:id="@+id/sort_by_sdk"
            android:title="@string/sort_by_sdk"/>
        <item android:id="@+id/sort_by_apksize"
            android:title="@string/sort_by_apksize"/>
        <item android:id="@+id/sort_by_appsize"
            android:title="@string/sort_by_appsize"/>
        <item android:id="@+id/sort_by_updata"
            android:title="@string/sort_by_updata"/>
        <item android:id="@+id/sort_by_first_install_data"
            android:title="@string/sort_by_first_install_data"/>
    </group>
</menu>