<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/reminder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/req_queryAllApp" />

        <TextView
            android:id="@+id/req_queryAllApp_rs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reqStorage" />

        <TextView
            android:id="@+id/req_storage_rs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_req_appUsage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reqAppUsage" />

        <TextView
            android:id="@+id/req_appUsage_rs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </LinearLayout>

    <TextView
        android:id="@+id/privacy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_privacy_deal"
        android:textColor="@android:color/holo_blue_light" />

    <CheckBox
        android:id="@+id/cb_disableReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/disablePermissionReminder"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"/>

    <Button
        android:id="@+id/entryMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/entry_app"
        android:textSize="18sp"
        style="@style/Widget.MaterialComponents.Button.TextButton" />
</LinearLayout>