<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryVariant"
    android:clickable="true"
    android:focusable="true"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:background="?attr/colorOnPrimary"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/close_search"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:text="@string/left"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search_reminder"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/clear_text"
            android:src="@drawable/ic_clear_light"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@string/clearKeyWords" />
    </LinearLayout>
</FrameLayout>