<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="90dp"
    android:orientation="horizontal">

    <View
        android:id="@+id/select_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/select_multiple"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/appLabel"
                    style="?android:attr/textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textSize="18sp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/split_aab"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="2dp"
                        android:contentDescription="@string/aab"
                        android:src="@drawable/aab"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/flag_xapk"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="2dp"
                        android:contentDescription="@string/xapk"
                        android:src="@drawable/xapk_icon"
                        android:visibility="invisible" />
                </FrameLayout>
            </LinearLayout>

            <com.alphi.apkexport.widget.MarqueeHorizontalTextView
                android:id="@+id/appPackageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="14sp" />

            <include
                android:id="@+id/item_show_full"
                layout="@layout/item_full"/>

            <include
                android:id="@+id/item_show_lite"
                layout="@layout/item_lite" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>